// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderBranchTipChip — structural snapshots drops pill styling on selected rows (the row inverse carries it) 1`] = `
{
  "chip": {
    "isHead": true,
    "kind": "head",
    "name": "main",
  },
  "node": <Text
    bold={true}
  >
    [main] 
  </Text>,
  "width": 7,
}
`;

exports[`renderBranchTipChip — structural snapshots falls back to the legacy "slash = remote" heuristic when remoteNames is absent 1`] = `
{
  "chip": {
    "isHead": false,
    "kind": "remote",
    "name": "feat/widgets",
  },
  "node": <Text>
    <Text
      bold={false}
      color="gray"
      inverse={true}
    >
       feat/widgets 
    </Text>
    <Text>
       
    </Text>
  </Text>,
  "width": 15,
}
`;

exports[`renderBranchTipChip — structural snapshots renders a plain local branch chip as a blue inverse pill 1`] = `
{
  "chip": {
    "isHead": false,
    "kind": "local",
    "name": "develop",
  },
  "node": <Text>
    <Text
      bold={false}
      color="blue"
      inverse={true}
    >
       develop 
    </Text>
    <Text>
       
    </Text>
  </Text>,
  "width": 10,
}
`;

exports[`renderBranchTipChip — structural snapshots renders a remote-tracking ref as a yellow inverse pill 1`] = `
{
  "chip": {
    "isHead": false,
    "kind": "remote",
    "name": "origin/main",
  },
  "node": <Text>
    <Text
      bold={false}
      color="gray"
      inverse={true}
    >
       origin/main 
    </Text>
    <Text>
       
    </Text>
  </Text>,
  "width": 14,
}
`;

exports[`renderBranchTipChip — structural snapshots renders a slashy local branch as a blue pill when remoteNames distinguishes it 1`] = `
{
  "chip": {
    "isHead": false,
    "kind": "local",
    "name": "feat/widgets",
  },
  "node": <Text>
    <Text
      bold={false}
      color="blue"
      inverse={true}
    >
       feat/widgets 
    </Text>
    <Text>
       
    </Text>
  </Text>,
  "width": 15,
}
`;

exports[`renderBranchTipChip — structural snapshots renders bracketed fallback in noColor mode 1`] = `
{
  "chip": {
    "isHead": true,
    "kind": "head",
    "name": "main",
  },
  "node": <Text
    bold={true}
  >
    [main] 
  </Text>,
  "width": 7,
}
`;

exports[`renderBranchTipChip — structural snapshots renders the HEAD chip as a green inverse pill 1`] = `
{
  "chip": {
    "isHead": true,
    "kind": "head",
    "name": "main",
  },
  "node": <Text>
    <Text
      bold={true}
      color="green"
      inverse={true}
    >
       main 
    </Text>
    <Text>
       
    </Text>
  </Text>,
  "width": 7,
}
`;
